# Cmake_VS2022_C--

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  conanfile.txt
src/: test.cpp
src/app/: test.cpp  test.h
src/myLib/: myLib.cpp  mylib.h
